Bug 1150966 - Check whether |streams_| is null on stats methods in NrIceMediaStream. r=drno, a=lmandel